--- a/topdeals/templates/header.html
+++ b/topdeals/templates/header.html
@@ -8,6 +8,9 @@
     <title>Top Deals</title>
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
     <script src="{% static 'assets/js/tailwind.js' %}"></script>
+
+    <link rel="stylesheet" href="{% static 'assets/css/tailwind-elements.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
   </head>
 
   <nav class="relative navbar_mobile hidden">
